--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,7 @@ ej1/
 ej2/
 ej3/
 ej4/
+ignore/
 
 # Created by https://www.toptal.com/developers/gitignore/api/intellij+iml
 # Edit at https://www.toptal.com/developers/gitignore?templates=intellij+iml
